Fix some bugs before starting with landing page

--- a/_assets/scss/_tokensale.scss
+++ b/_assets/scss/_tokensale.scss
@@ -1,3 +1,9 @@
+.token-sale-main {
+    padding-left: var(--layou-default-padding);
+    padding-right: var(--layou-default-padding);
+}
+
+
 .tokensale-main-heading {
     text-align: center;
     margin: 2em;
