--- a/_assets/scss/_about.scss
+++ b/_assets/scss/_about.scss
@@ -1,4 +1,6 @@
 .about-wrapper {
+    padding-left: var(--layou-default-padding);
+    padding-right: var(--layou-default-padding);
     display: grid;
     grid-template-columns: 1fr 1fr;
 
@@ -26,7 +28,7 @@
 }
 
 .content .about-btn-p {
-    margin-top: 3em;
+    margin-top: 5em;
     text-align: center;
 }
 
@@ -61,7 +63,7 @@
     }
 }
 
-@media (min-width: 750px) {
+@media (min-width: 1024px) {
     .about-wrapper div {
         grid-column: span 1;
     }
