--- a/_assets/scss/_gallery.scss
+++ b/_assets/scss/_gallery.scss
@@ -1,3 +1,8 @@
+.team-content {
+  padding-left: var(--layou-default-padding);
+  padding-right: var(--layou-default-padding);
+}
+
 .gallery {
   padding: 0;
   margin: 0;
