--- a/_assets/scss/_layout.scss
+++ b/_assets/scss/_layout.scss
@@ -1,7 +1,7 @@
 .site {
     max-width: var(--layout-main-width);
     margin: 0 auto;
-    padding: 2em;
+    padding: 0;
 }
 
 .site-main {
@@ -15,6 +15,7 @@
 
         nav {
             margin-left: auto;
+            padding-right: var(--layou-default-padding);
         }
     }
 }
