--- a/_assets/scss/_news.scss
+++ b/_assets/scss/_news.scss
@@ -1,3 +1,8 @@
+.news-main {
+    padding-left: var(--layou-default-padding);
+    padding-right: var(--layou-default-padding);
+}
+
 .main-news-heading {
     padding: 0.4em;
     border-bottom: 1px solid black;
@@ -61,7 +66,7 @@
 
 .layout-news-media {
     text-align: center;
-    padding: 2em;
+    padding: var(--layou-default-padding);
 
     img {
         width: 70%;
@@ -77,6 +82,11 @@
     font-weight: 700;
     font-size: 2.5em;
     margin: 0;
+}
+
+.layout-news-content {
+    padding-left: var(--layou-default-padding);
+    padding-right: var(--layou-default-padding);
 }
 
 .go-back-wrapper {
