--- a/_assets/scss/_site-footer.scss
+++ b/_assets/scss/_site-footer.scss
@@ -7,6 +7,7 @@
     box-shadow: 1px 1px 5px 1px rgba(0,0,0,0.75); */
     margin-top: 3em;
     text-align: center;
+    padding-bottom: 2em;
 }
 
 .site-footer-text {
