--- a/_assets/scss/_site-header.scss
+++ b/_assets/scss/_site-header.scss
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     font-size: 3em;
+    padding-left: var(--layou-default-padding);
 
     /* padding-left: 0.5em; */
     a {
