--- a/_assets/scss/_variables.scss
+++ b/_assets/scss/_variables.scss
@@ -3,7 +3,8 @@
     --font-size-body-larger: 16px;
     --font-size-body-big: 18px;
 
-    --layout-main-width: 70em;
+    --layout-main-width: 100vw;
+    --layou-default-padding: 100px;
 
     --color-body-text: #000;
     --color-body-bgrd: #FFF;
