--- a/_assets/scss/_index.scss
+++ b/_assets/scss/_index.scss
@@ -1,3 +1,107 @@
-.index-main p {
-    background: red;
+.index-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 0;
+    margin-top: -2em;
+}
+
+.index-container header {
+    grid-column: span 2;
+    text-align: center;
+    background: url("https://images.unsplash.com/photo-1552057426-9f23e61fa7b1?ixlib=rb-1.2.1&auto=format&fit=crop&w=967&q=80") no-repeat center center;
+    background-size: cover;
+    height: 70vh;
+    opacity: 1;
+}
+
+.index-container header h2 {
+    display: inline-block;
+    margin-top: 15vh;
+    font-size: 3em;
+    opacity: 1;
+    color:black;
+    font-weight: 900;
+    border: 1px solid transparent;
+    border-radius: 1em;
+    padding: 0.3em;
+    text-shadow: 1px 1px 0px #FFFFFF, 2px 2px 0px rgba(0,0,0,0.5);
+    text-transform: uppercase;
+}
+
+.index-container header h2:hover {
+    border: 1px solid white;
+}
+
+.index-container main {
+    grid-column: span 2;
+}
+ 
+.features-container {
+    height: 45vh;
+    background: rgb(244, 244, 244);
+    display: block;
+}
+
+.features-container ul {
+    text-align: center;
+    padding: 2em;
+    display: flex;
+    justify-content: space-evenly;
+    // flex-wrap: wrap;
+}
+
+.features-container li {
+    display: inline-block;
+    width: 22em;
+}
+
+.features-container i {
+    margin-top: 0.4em;
+    margin-bottom: 0.4em;
+    font-size: 5em;
+    color: var(--color-link-default);
+}
+
+.features-container i:hover {
+    transform: scale(1.1);
+}
+
+.main-elements {
+    grid-column: span 2;
+    height: 220vh;
+    background: white;
+}
+
+.single-element {
+    display: flex;
+    width: 100%;
+}
+
+.single-element .element-info {
+    display: inline-block;
+    width: 50%;
+}
+
+.single-element .element-media {
+    display: inline-block;
+    background: url("https://images.unsplash.com/photo-1517232115160-ff93364542dd?ixlib=rb-1.2.1&auto=format&fit=crop&w=966&q=80") no-repeat center center;
+    background-size: cover;
+    height: 55vh;
+    width: 50%;
+}
+
+.single-element .pic1 {
+    background: url("https://images.unsplash.com/photo-1517232115160-ff93364542dd?ixlib=rb-1.2.1&auto=format&fit=crop&w=966&q=80") no-repeat center center;
+}
+
+.single-element .pic2 {
+    background: url("https://images.unsplash.com/photo-1517232115160-ff93364542dd?ixlib=rb-1.2.1&auto=format&fit=crop&w=966&q=80") no-repeat center center;
+}
+
+.single-element .pic3 {
+    background: url("https://images.unsplash.com/photo-1517232115160-ff93364542dd?ixlib=rb-1.2.1&auto=format&fit=crop&w=966&q=80") no-repeat center center;
+}
+
+.single-element .pic4 {
+    background: url("https://images.unsplash.com/photo-1517232115160-ff93364542dd?ixlib=rb-1.2.1&auto=format&fit=crop&w=966&q=80") no-repeat center center;
 }
