--- a/docs/css/site.css
+++ b/docs/css/site.css
@@ -419,31 +419,80 @@ header nav ul li {
   background: white; }
 
 .single-element {
+  text-align: center;
   display: flex;
-  width: 100%; }
+  width: 100%;
+  flex-wrap: wrap; }
 
 .single-element .element-info {
+  display: inline-block;
+  width: 50%;
+  position: relative; }
+
+.single-element .element-info h2 {
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-weight: 900; }
+
+.single-element .element-info p {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); }
+
+.single-element .element-media {
   display: inline-block;
   width: 50%; }
 
 .single-element .element-media {
   display: inline-block;
-  background: url("https://images.unsplash.com/photo-1517232115160-ff93364542dd?ixlib=rb-1.2.1&auto=format&fit=crop&w=966&q=80") no-repeat center center;
   background-size: cover;
-  height: 55vh;
-  width: 50%; }
+  height: 55vh; }
 
 .single-element .pic1 {
   background: url("https://images.unsplash.com/photo-1517232115160-ff93364542dd?ixlib=rb-1.2.1&auto=format&fit=crop&w=966&q=80") no-repeat center center; }
 
 .single-element .pic2 {
-  background: url("https://images.unsplash.com/photo-1517232115160-ff93364542dd?ixlib=rb-1.2.1&auto=format&fit=crop&w=966&q=80") no-repeat center center; }
+  background: url("https://images.pexels.com/photos/47047/gold-ingots-golden-treasure-47047.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260") no-repeat center center; }
 
 .single-element .pic3 {
-  background: url("https://images.unsplash.com/photo-1517232115160-ff93364542dd?ixlib=rb-1.2.1&auto=format&fit=crop&w=966&q=80") no-repeat center center; }
+  background: url("https://images.unsplash.com/photo-1507235071172-438ca6950a8e?ixlib=rb-1.2.1&auto=format&fit=crop&w=967&q=80") no-repeat center center; }
 
 .single-element .pic4 {
-  background: url("https://images.unsplash.com/photo-1517232115160-ff93364542dd?ixlib=rb-1.2.1&auto=format&fit=crop&w=966&q=80") no-repeat center center; }
+  background: url("https://images.unsplash.com/photo-1559213911-5f3e4ebe094e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80") no-repeat center center; }
+
+.index-container footer {
+  grid-column: span 2; }
+
+.contact-us {
+  text-align: center;
+  height: 30vh;
+  background: #f4f4f4;
+  display: block; }
+
+.contact-us .footer-info {
+  font-weight: 900;
+  padding-top: 2.5em; }
+
+.footer-form input {
+  padding: 0.5em;
+  margin: 0.5em; }
+
+.footer-form a {
+  border: 2px solid transparent;
+  background: var(--color-btn-bgrd);
+  font-size: 1.7em;
+  padding: 0.5em;
+  border-radius: 1em;
+  font-weight: 900;
+  color: var(--color-btn-text); }
+
+.footer-form a:hover {
+  border: 2px solid black;
+  background: var(--color-btn-text);
+  color: var(--color-btn-bgrd); }
 
 .team-content {
   padding-left: var(--layou-default-padding);
