--- a/_assets/scss/_index.scss
+++ b/_assets/scss/_index.scss
@@ -37,7 +37,6 @@
 }
 
 .features-container {
-    height: 45vh;
     background: rgb(244, 244, 244);
     display: block;
 
@@ -45,14 +44,14 @@
         text-align: center;
         padding: 2em;
         display: flex;
+        flex-wrap: wrap;
         justify-content: space-evenly;
-        // flex-wrap: wrap;
-
     }
 
     li {
         display: inline-block;
-        width: 22em;
+        width: 18em;
+        padding: 1em;
     }
 
     i {
@@ -69,8 +68,9 @@
 
 .main-elements {
     grid-column: span 2;
-    height: 220vh;
     background: white;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .single-element {
@@ -82,21 +82,16 @@
     .element-info {
         display: inline-block;
         width: 50%;
-        position: relative;
 
         h2 {
-            position: absolute;
-            top: 25%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            font-size: 2.1em;
+            padding: 1em;
             font-weight: 900;
         }
 
         p {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            padding: 1em;
+            font-size: 1.2em;
         }
     }
 
@@ -131,7 +126,6 @@
 
 .contact-us {
     text-align: center;
-    height: 30vh;
     background: rgb(244, 244, 244);
     display: block;
 
@@ -142,18 +136,27 @@
 }
 
 .footer-form {
+    padding-bottom: 5em;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+
     input {
         padding: 0.5em;
         margin: 0.5em;
+        border-radius: 0.5em;
+        border: 2px solid black;
+        outline: none;
     }
 
     a {
         border: 2px solid transparent;
         background: var(--color-btn-bgrd);
-        font-size: 1.7em;
-        padding: 0.5em;
+        font-size: 1.3em;
+        padding: 0.35em;
         border-radius: 1em;
-        font-weight: 900;
+        font-weight: 500;
         color: var(--color-btn-text);
 
         &:hover {
