--- a/docs/css/site.css
+++ b/docs/css/site.css
@@ -386,17 +386,18 @@ header nav ul li {
     grid-column: span 2; }
 
 .features-container {
-  height: 45vh;
   background: #f4f4f4;
   display: block; }
   .features-container ul {
     text-align: center;
     padding: 2em;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-evenly; }
   .features-container li {
     display: inline-block;
-    width: 22em; }
+    width: 18em;
+    padding: 1em; }
   .features-container i {
     margin-top: 0.4em;
     margin-bottom: 0.4em;
@@ -407,8 +408,9 @@ header nav ul li {
 
 .main-elements {
   grid-column: span 2;
-  height: 220vh;
-  background: white; }
+  background: white;
+  display: flex;
+  flex-wrap: wrap; }
 
 .single-element {
   text-align: center;
@@ -417,19 +419,14 @@ header nav ul li {
   flex-wrap: wrap; }
   .single-element .element-info {
     display: inline-block;
-    width: 50%;
-    position: relative; }
+    width: 50%; }
     .single-element .element-info h2 {
-      position: absolute;
-      top: 25%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+      font-size: 2.1em;
+      padding: 1em;
       font-weight: 900; }
     .single-element .element-info p {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%); }
+      padding: 1em;
+      font-size: 1.2em; }
   .single-element .element-media {
     display: inline-block;
     width: 50%;
@@ -450,29 +447,36 @@ header nav ul li {
 
 .contact-us {
   text-align: center;
-  height: 30vh;
   background: #f4f4f4;
   display: block; }
   .contact-us .footer-info {
     font-weight: 900;
     padding-top: 2.5em; }
 
-.footer-form input {
-  padding: 0.5em;
-  margin: 0.5em; }
-
-.footer-form a {
-  border: 2px solid transparent;
-  background: var(--color-btn-bgrd);
-  font-size: 1.7em;
-  padding: 0.5em;
-  border-radius: 1em;
-  font-weight: 900;
-  color: var(--color-btn-text); }
-  .footer-form a:hover {
+.footer-form {
+  padding-bottom: 5em;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center; }
+  .footer-form input {
+    padding: 0.5em;
+    margin: 0.5em;
+    border-radius: 0.5em;
     border: 2px solid black;
-    background: var(--color-btn-text);
-    color: var(--color-btn-bgrd); }
+    outline: none; }
+  .footer-form a {
+    border: 2px solid transparent;
+    background: var(--color-btn-bgrd);
+    font-size: 1.3em;
+    padding: 0.35em;
+    border-radius: 1em;
+    font-weight: 500;
+    color: var(--color-btn-text); }
+    .footer-form a:hover {
+      border: 2px solid black;
+      background: var(--color-btn-text);
+      color: var(--color-btn-bgrd); }
 
 .team-content {
   padding-left: var(--layou-default-padding);
